# Django-Online-Store

./: .env.dist  .flake8  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
market/: test-product.json  valid Продукты re-Store.json
market/accounts/: admin.py  forms.py  managers.py  models.py  urls.py  utils.py  views.py
market/cart/: context_processors.py  forms.py  services.py  tests.py  urls.py  views.py
market/categories/: admin.py  models.py  urls.py
market/config/: __init__.py  celery.py  settings.py  urls.py
market/discounts/: admin.py  discount.py  models.py  urls.py  views.py
market/fixtures/: 01-groups.json  01-users-permissions.json  01-users.json  02-groups.json  04-shops.json  05-categories.json  06-offers.json  08-offers.json  08-products.json  14-banners.json  14-products.json  15-banners.json  16-reviews.json  17-details.json  17-history-products.json  19-products-views.json  20-discount-cart.json  21-discount-products.json  22-discount-sets.json  23-orders.json  24-orders_item.json  25-site-settings.json  details.json  discount-cart.json  discount-products.json  discount-sets.json  product-details.json  product-images.json  shops.json
market/orders/: admin.py  constants.py  forms.py  models.py  services.py  urls.py  views.py
market/payment/: admin.py  forms.py  mixins.py  models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
market/products/: admin.py  apps.py  constants.py  filters.py  forms.py  models.py  tasks.py  urls.py  utils.py  views.py
market/settings/: admin.py  forms.py  models.py  urls.py  (+1 more)
(+105 files in other folders)
